Global refactor of repeating code mistakes